# kb-doctor

./: AGENT.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: HOMEBREW.md
src/kb_doctor/: __init__.py  cli.py  core.py
tests/: test_core.py
