[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kb-doctor"
version = "0.1.0"
description = "Knowledge base diagnostics and health reporting CLI."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "erron.ai"}]
dependencies = []

[project.urls]
Homepage = "https://github.com/erron-ai/kb-doctor"
Issues = "https://github.com/erron-ai/kb-doctor/issues"

[project.scripts]
kb-doctor = "kb_doctor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
